git-svn-id: http://svn.vdombox.ru/flextools/trunk@6018 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ErrorViewSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ErrorViewSkin.mxml
@@ -18,7 +18,7 @@
 			 bottom="0">
 
 		<s:Button id="backButton"
-				  height="35" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
+				  height="35" label="{ resourceManager.getString( 'LoginForm', 'back_button' ) }" minWidth="100"
 				  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"/>
 	</s:Group>
 
