--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
@@ -5,7 +5,7 @@
 					  xmlns:s="library://ns.adobe.com/flex/spark"
 					  width="200" x="@{ _treeElementVO.left }" y="@{ _treeElementVO.top }"
 					  skinClass="net.vdombox.ide.modules.tree.view.skins.TreeElementSkin"
-					  creationComplete="creationCompleteHandler()" removed="removedHandler()">
+					  creationComplete="creationCompleteHandler()" remove="removeHandler()">
 
 	<fx:Script>
 		<![CDATA[
@@ -162,7 +162,7 @@
 				addEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler );
 			}
 
-			private function removedHandler() : void
+			private function removeHandler() : void
 			{
 				dispatchEvent( new TreeElementEvent( TreeElementEvent.REMOVED ) );
 			}
