--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
@@ -2,9 +2,10 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/halo"
-				xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*"
 				
-				minHeight="21" width="100%" xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
+				minHeight="23" width="100%"
+				xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*"
+				xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*">
 
 	<fx:Script>
 		<![CDATA[
@@ -13,17 +14,17 @@
 			import mx.collections.SortField;
 			import mx.events.ValidationResultEvent;
 			import mx.graphics.SolidColor;
-			
+
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
 			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 
 			[Bindable]
 			private var _attributeVO : AttributeVO;
-			
+
 			[Bindable]
 			private var displayName : String;
-			
+
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -44,13 +45,13 @@
 				//
 				codeInterface[ "type" ] = matches[ 1 ].toLowerCase();
 				codeInterface[ "value" ] = matches[ 2 ];
-				
+
 				//				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
 //				bgFill.fill = new SolidColor(uint( getColorByGroup( _attributeDescriptionVO.colorGroup ) ));
-				
+
 				secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
 				firstColor.color = secondColor.color + 0x222222;
-				
+
 				//				valueField.maxChars = uint( codeInterface[ "value" ] );
 				//				valueField.text = _attributeVO.value;
 
@@ -165,27 +166,35 @@
 	<s:layout>
 
 		<s:HorizontalLayout verticalAlign="middle"
-							gap="0" />
+							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group width="100%" minHeight="21">
-		
+	<s:Group height="100%" width="100%">
+
 		<s:Rect bottom="0" left="0" right="0" top="0">
+
 			<s:fill>
+
 				<s:LinearGradient rotation="90">
-					<s:GradientEntry id="firstColor" color="#D8D8D8" />
-					<s:GradientEntry id="secondColor" color="#CDCDCD" />
+
+					<s:GradientEntry id="firstColor"
+									 color="#D8D8D8" />
+
+					<s:GradientEntry id="secondColor"
+									 color="#CDCDCD" />
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
-		
+
 		<s:RichText id="nameLabel"
 					minHeight="21" text="{ displayName }" width="100%"
-					paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
-		
+					color="#FFFFFF" fontFamily="Verdana" fontSize="10"
+					fontWeight="bold" paddingBottom="2" paddingRight="5"
+					paddingTop="2" textAlign="right" verticalAlign="middle" verticalCenter="0"/>
 	</s:Group>
-
+	
 	<attributeRenderers:ColorPicker id="valueField"
-							 height="21" minWidth="10" width="90"
-							 color="@{ _attributeVO.value }" textAlign="left" />
+									height="21" minWidth="10" width="90"
+									color="@{ _attributeVO.value }"
+									textAlign="left" />
 </s:ItemRenderer>
