--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeFileItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeFileItemRenderer.mxml
@@ -5,7 +5,7 @@
 				xmlns:multiline="net.vdombox.ide.modules.wysiwyg.view.components.multiline.*"
 				xmlns:resourceSelector="net.vdombox.ide.modules.wysiwyg.view.components.resourceSelector.*"
 				
-				minHeight="21" width="100%"
+				minHeight="23" width="100%"
 				creationComplete="creationCompleteHandler()" xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
 
 	<fx:Script>
@@ -129,10 +129,10 @@
 	<s:layout>
 		
 		<s:HorizontalLayout verticalAlign="middle"
-							gap="0" />
+							gap="2" paddingRight="2" />
 	</s:layout>
 
-	<s:Group width="100%" minHeight="21">
+	<s:Group width="100%" height="100%">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
@@ -144,8 +144,8 @@
 		</s:Rect>
 		
 		<s:RichText id="nameLabel"
-					minHeight="21" text="{ displayName }" width="100%"
-					paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
+					minHeight="21" text="{ displayName }" width="100%" color="#FFFFFF" fontFamily="Verdana" fontSize="10" fontWeight="bold"
+					paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" verticalCenter="0" />
 		
 	</s:Group>
 
