--- a/TypeEditor/v.02/ObjectEditor2/src/visualization/libraries/Libraries.mxml
+++ b/TypeEditor/v.02/ObjectEditor2/src/visualization/libraries/Libraries.mxml
@@ -6,4 +6,16 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:Label text="Libraries"/>
+	<s:HGroup width="100%" height="100%">
+		<s:VGroup width="200" height="100%">
+			<s:List width="100%" height="100%"/>
+			<s:HGroup right="0">
+				<s:Button label="Add"/>
+				<s:Button label="Delete"/>
+			</s:HGroup>
+		</s:VGroup>
+		<s:TextArea  text="123" width="100%" height="100%"/>
+			
+	</s:HGroup>
+	
 </s:Group>
