--- a/TypeEditor/v.02/ObjectEditor2/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/ObjectEditor2/src/ObjectEditor2.mxml
@@ -3,7 +3,8 @@
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:visualization="visualization.*"
-					   width="800" height="600" xmlns:atributes="visualization.atributes.*" xmlns:information="visualization.information.*" xmlns:libraries="visualization.libraries.*" xmlns:languages="visualization.languages.*" xmlns:resourses="visualization.resourses.*" xmlns:events="visualization.events.*" xmlns:actions="visualization.actions.*" xmlns:code="visualization.code.*">
+					   width="800" height="600" xmlns:atributes="visualizatin.atributes.*" xmlns:information="visualization.information.*" xmlns:libraries="visualization.libraries.*" xmlns:languages="visualization.languages.*" xmlns:resourses="visualization.resourses.*" xmlns:events="visualization.events.*" xmlns:actions="visualization.actions.*" xmlns:code="visualization.code.*"
+					   creationPolicy="all" xmlns:atributes1="visualization.atributes.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -13,6 +14,8 @@
 			
 			private var xmlObject : XML;
 			private var fileUpload:FileReference = new FileReference();
+			
+			
 			private function openFile():void
 			{
 //				var fileUpload:FileReference = new FileReference();
@@ -35,6 +38,8 @@
 //					textArea.htmlText =  _lib.echo( fileUpload.data.toString());
 //					panel.title = "PageOne Migration - " + fileUpload.name;
 					information.dataProvader = xmlObject;
+					libraries.dataProvader = xmlObject;
+					sourceCode.dataProvader = xmlObject;
 					
 				}
 			}
@@ -62,7 +67,7 @@
 		
 	
 		
-	<s:VGroup>
+	<s:VGroup width="100%" height="100%">
 		<s:HGroup>
 			<s:Button label="Open" click="openFile()"/>
 			<s:Button label="Save" click="saveFile()" enabled="false"/>
@@ -70,14 +75,15 @@
 			
 		</s:HGroup>
 		<mx:TabNavigator  width="100%" height="100%">
-			<s:NavigatorContent label="Information" width="100%" height="100%">
-						<information:Information id="information" />		</s:NavigatorContent>
+			<s:NavigatorContent label="Information" width="100%" height="100%"  >
+						<information:Information id="information" enabled="false" />
+			</s:NavigatorContent>
 
 			<s:NavigatorContent label="Atributes" width="100%" height="100%">
-						<atributes:Atributes />		</s:NavigatorContent>
+				<atributes1:Atributes />	</s:NavigatorContent>
 			
-			<s:NavigatorContent label="Libraries" width="100%" height="100%">
-				<libraries:Libraries />	</s:NavigatorContent>
+			<s:NavigatorContent label="Libraries" width="100%" height="100%" >
+				<libraries:Libraries id="libraries" left="10" right="10" bottom="10" enabled="false"  />	</s:NavigatorContent>
 			
 			<s:NavigatorContent label="Languages" width="100%" height="100%">
 				<languages:Languages />	</s:NavigatorContent>
@@ -91,8 +97,8 @@
 			<s:NavigatorContent label="Actions" width="100%" height="100%">
 				<actions:Actions />		</s:NavigatorContent>
 			
-			<s:NavigatorContent label="Actions" width="100%" height="100%">
-				<code:SourceCode />		</s:NavigatorContent>
+			<s:NavigatorContent label="SourceCode" width="100%" height="100%">
+				<code:SourceCode id="sourceCode" left="10" right="10" bottom="10" enabled="false" />		</s:NavigatorContent>
 			
 		</mx:TabNavigator>
 </s:VGroup>	
