Add fill Languages
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6114 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/ObjectEditor2/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/ObjectEditor2/src/ObjectEditor2.mxml
@@ -40,6 +40,7 @@
 					information.dataProvader = xmlObject;
 					libraries.dataProvader = xmlObject;
 					sourceCode.dataProvader = xmlObject;
+					languages.dataProvader = xmlObject;
 					
 				}
 			}
@@ -86,7 +87,7 @@
 				<libraries:Libraries id="libraries" left="10" right="10" bottom="10" enabled="false"  />	</s:NavigatorContent>
 			
 			<s:NavigatorContent label="Languages" width="100%" height="100%">
-				<languages:Languages />	</s:NavigatorContent>
+				<languages:Languages id="languages" enabled="false"  />	</s:NavigatorContent>
 			
 			<s:NavigatorContent label="Resourses" width="100%" height="100%">
 				<resourses:Resourses />			</s:NavigatorContent>
