--- a/TypeEditor/v.02/ObjectEditor2/src/visualization/languages/Languages.mxml
+++ b/TypeEditor/v.02/ObjectEditor2/src/visualization/languages/Languages.mxml
@@ -5,5 +5,79 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Label text="LAnguages"/>
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayCollection;
+			import mx.controls.dataGridClasses.DataGridColumn;
+			
+			private var _data : XML;
+			
+			[Bindable]
+			public var arLanguages:ArrayCollection = new ArrayCollection();
+			
+			public function set  dataProvader(xml:XML):void
+			{
+				this.enabled = true;
+				
+				var cols:Array = new Array();
+				var dataGridColumn: DataGridColumn = new DataGridColumn("ID");
+				dataGridColumn.width = 50;
+				dataGridColumn.setStyle("fontWeight", "bold");
+				cols.push(dataGridColumn);
+				
+				_data =  xml.Languages[0];
+				if (!_data) _data = new XML("<Languages/>");
+				
+				
+				
+				for each(var child:XML in _data.children())
+				{	
+					if (child.name() == "Language")
+					{
+						dataGridColumn = new DataGridColumn(child[0].@Code);
+						cols.push(dataGridColumn);
+					}
+						
+				}
+				
+				languages.columns = cols;
+				
+				arLanguages.removeAll();
+				
+				//arLanguages.addItem({label:child.name(), data:child[0]});
+				
+				var countLanguages:int = _data.children().length();
+				var	langEN:XML = _data.Language.(@Code == "en_US")[0];
+				for each (var word:XML in langEN.children())
+				{
+					var item:Object = {};
+					var id:String = word.@ID;
+					
+					item["ID"] = id;
+//					item["en_US"] = word.toString();
+					
+					for(var i:int = 0; i < countLanguages; i++)
+					{
+						var lang:XML = _data.Language[i];
+						item[lang.@Code] = lang.Sentence.(@ID == id )[0].toString();
+					}
+					
+					arLanguages.addItem(item)
+				}
+				
+				
+			}
+			
+		]]>
+	</fx:Script>
+	<s:VGroup width="100%" height="100%">
+	<s:Button label="Add Language" />	
+	<mx:DataGrid id="languages" color="0x323232" width="100%" height="100%" rowCount="3" dataProvider="{arLanguages}"/>
+	<s:HGroup textAlign="right" width="100%"  >
+		<s:HGroup width="100%"/>
+		<s:Button label="Add" />
+		<s:Button label="Edit" />
+		<s:Button label="Delete" />
+	</s:HGroup>
+	</s:VGroup>
 </s:Group>
